# synth

./: .gitignore
adsr/adsr/: adsr.kicad_pcb  adsr.kicad_prl  adsr.kicad_pro  adsr.kicad_sch
eurocad/Eurocad.pretty/: MIDI_DIN5.kicad_mod  RA1H1C112R.kicad_mod
eurocad/Synthesizer.pretty/: CONN_QuickTab_TE_Conn_1217861-1.kicad_mod  Jack_3.5mm_QingPu_WQP-PJ398SM_Vertical_NoRing.kicad_mod  PS30L-R01BR20KN.kicad_mod  PTL20-15G1-203B2.kicad_mod  Potentiometer_Alpha_RV09AF-40-00D_Single_Vertical.kicad_mod
flight_computer/disp/: ._target  Cargo.toml
flight_computer/firmware/: Cargo.toml  memory.x  pinout.txt  rp235x_riscv.x
flight_computer/firmware/.cargo/: config.toml
flight_computer/firmware/pio/: dac.mon  dac.pio  test.pio
flight_computer/firmware/src/: clocks.rs  main.rs  output_core.rs
midi-controller/: bom.csv  midi-controller-B_Cu.gbr  midi-controller-B_Mask.gbr  midi-controller-B_Silkscreen.gbr  midi-controller-Edge_Cuts.gbr  midi-controller-F_Cu.gbr  midi-controller-F_Mask.gbr  midi-controller-F_Silkscreen.gbr  midi-controller-job.gbrjob  midi-controller.kicad_pcb  midi-controller.kicad_prl  midi-controller.kicad_pro  midi-controller.kicad_sch
midi-controller/firmware/: Cargo.toml
midi-controller/firmware/.cargo/: config.toml
midi-controller/firmware/src/: main.rs
power_v2/: power_v2.kicad_pcb  power_v2.kicad_prl  power_v2.kicad_pro  power_v2.kicad_sch  powersupply.kicad_sch
veils_clone/: CH1.kicad_sch  CH4.kicad_sch  CH_23.kicad_sch  veils_clone.kicad_pcb  veils_clone.kicad_prl  veils_clone.kicad_pro  veils_clone.kicad_sch
(+84 files in other folders)
