[package]
name = "midi-cv"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.6"
# embedded-hal = "0.2"
# stm32g4 = { version = "0.15", features = ["stm32g431", "rt"] }
stm32g4xx-hal = { git = "https://github.com/stm32-rs/stm32g4xx-hal.git", features = ["stm32g431", "rt"]}
panic-halt = "0.2.0"
rtt-target = "0.5.0"
defmt = "0.3.8"
embedded-midi = "0.1.2"
#ufmt = "0.2.0"
# defmt-rtt = "0.4.1"
